# StudyBuddy-Bot

./: README.md  app.ipynb  chatbot.py  main.py  pyproject.toml  requirements.txt  test.py
memory/: long_term.db  long_term_memory.db
memory/entity/: chroma.sqlite3
memory/short_term/: chroma.sqlite3
